--- a/app/styles/layout/_sidebars.scss
+++ b/app/styles/layout/_sidebars.scss
@@ -47,6 +47,7 @@
 
 .about-me-panel {
   font-size: 14px;
+  @include word-break();
 }
 
 .about-me-stats {
