--- a/app/styles/utilities/_mixins.scss
+++ b/app/styles/utilities/_mixins.scss
@@ -3,3 +3,9 @@
   top: 50%;
   transform: translateY(-50%);
 }
+
+@mixin word-break() {
+  word-wrap: break-word; // Fallback
+  word-break: break-all; // "      "
+  word-break: break-word;
+}
